# valgrind-se

./: Makefile.am  se_main.c  se_replace_strmem.c
client/: se_client.cpp  se_client.h
server/: main.py  message.py  server.py  symmanager.py
src/: common.c  common.h  expr.c  expr.h  instrument.c  instrument.h  memory.c  memory.h  net.c  net.h  state.c  state.h  symbolic.c  symbolic.h  syscall.c  syscall.h
